vendor/structopt-0.3.21/tests/ui/rename_all_wrong_casing.stderr
error: unsupported casing: `fail`
  --> $DIR/rename_all_wrong_casing.rs:12:42
   |
12 | #[structopt(name = "basic", rename_all = "fail")]
   |                                          ^^^^^^
